<resources>
    <string name="app_name">CanvasShader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="clamp">CLAMP</string>
    <string name="repeat">REPEAT</string>
    <string name="mirror">MIRROR</string>

    <string name="bitmap">BITMAP</string>
    <string name="linear">LINEAR</string>
    <string name="redial">REDIAL</string>
    <string name="sweep">SWEEP</string>
</resources>
